--- a/madlibs/style.css
+++ b/madlibs/style.css
@@ -17,3 +17,20 @@ p {
 input {
   color: aqua;
 }
+
+input {
+  background-color: aqua;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: medium;
+
+}
+
+.container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  gap: 10px;
+}
